feat: persist cards

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   <section id="notesPlace">
   </section>
 
+  <script src="app/infra/connection-factory.js"></script>
+
   <script src="app/user/user.model.js"></script>
   <script src="app/user/user.dao.js"></script>
 
-  <script src="app/note/note-list.model.js"></script>
+  <script src="app/note/note.dao.js"></script>
   <script src="app/note/note.model.js"></script>
   <script src="app/note/note.view.js"></script>
   <script src="app/note/note.controller.js"></script>
