--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,6 +31,18 @@
   <script>
     var noteController = null;
     var authController = new AuthController();
+  </script>
+  <script type="module">
+     if ('serviceWorker' in navigator) {
+      window.addEventListener('load', async () => {
+        try {
+          const registration = await navigator.serviceWorker.register('/app/infra/service-worker.js');
+          console.log('ServiceWorker registrado com sucesso:', registration);
+        } catch (error) {
+          console.log('Falha ao registrar o ServiceWorker:', error);
+        }
+      });
+    }
   </script>
 </body>
 </html>
